--- a/public/ui.css
+++ b/public/ui.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body {
 	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
@@ -8,4 +12,15 @@ body {
 
 .ng-dirty.ng-valid {
 	border-color: green;
+}
+
+#chat_area {
+  display: block;
+  height: 80%;
+  overflow-y: scroll;
+  word-wrap: break-word;
+}
+
+.hidden-submit {
+  display: none;
 }
